--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 
 ul {
     margin: 0;
+    list-style: none;
 }
 
 h3 {
@@ -16,6 +17,8 @@ h3 {
 span {
     margin: .5em;
 }
+
+input
 
 #no-js {
     padding: 1em;
